2009-Apr-7 Dave Glowacki
  *ReactionManager.cpp: fix some bugs which came to light for testing the i-propyl system- the case of 1 isomer with only irrreversible channels
  *clean up some other stuff

2009-Apr-5 Struan Robertson

  * ReactionManager.cpp: Fix for grid search, values for Einf where being calculated incorrectly.
  * MesmerQA: Update of isopropyl test.

2009-Apr-5 Struan Robertson

  * ReactionManager.cpp: New section added to estimate threshold of irreversible reaction, which is then used to determined energy limits.

2009-Apr-4 Struan Robertson

  * MesmerILT.cpp: Fixed problem with Unimoleculer ILT calculation.
  * MesmerQA: Update of isopropyl test.

2009-Mar-31 Dave Glowacki
  *add a few changes to LINUX MakeFile

2009-Mar-31 Dave Glowacki
  * updates to manual: (1) discussion of Linux compilation issues & (2) discussion of Bartis Widom output
  * add to Bartis Widom code so that it checks separation between CSEs and IEREs and generates warning messages if appropriate
  * update baselines

2009-Mar-30 Struan Robertson

  * MesmerQA: Initial checkin of isopropyl test.

2009-Mar-30 Dave Glowacki
  * fixed GCC compiler problem that showed up when testing 64 bit compilation

2009-Mar-26 Dave Glowacki
  * fixed GCC compiler problem that showed up when testing 64 bit compilation

2009-Mar-21 Struan Robertson

  * src/ReactionManager.cpp: Tidy-up of BuildReactionOperator method.

2009-Mar-21 Struan Robertson

  * src/AssociationReaction.cpp: Added code relating to contracted basis set method.

2009-03-14 Chris Morley
  
  * src/Persistence.h: make PersistPtr work with NULL content.
    (Previously only partially implemented.)
  * src/XMLPersist.cpp, src/XMLPersist.h: Move loading of defaults.xml until
  it is used, so that a fully formed XML file doesn't need it. Make more robust
  to missing defaults.xml and librarymols.xml.

_2009_03_13__11_48_50_ Chi-Hsiu Liang

  * Updated manual for reservoir state method